# kyx-governance

./: .dockerignore  .env  .env.example  .gitignore  AI_CONTEXT.md  Cargo.toml  Dockerfile  FULL_REPORT.md  GEMINI.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  governance_report.md  run-mcp.sh  update_rule.surql
.github/workflows/: validate-docs.yml
docs/: AI_CONTEXT.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MASTER_WORKFLOW_LOG.md  OPERATION_GUIDE.md  PRD.md  PROJECT_OVERVIEW.md  README.md  SAD.md  TDD.md  TEST_PLAN.md
docs/templates/: execution_grade_tdd.md  project_overview.md  standard_doc.md
docs/walkthroughs/: 02-audit-logging.md
knowledge_base/: kyx-governance.surql
migrations/: 01_schema.surql  02_seed_data.surql  02_seed_projects.surql  03_seed_tools.surql  04_seed_rules.surql  04_update_tool_descriptions.surql  05_seed_docs_global.surql  06_seed_docs_kernel.surql  07_seed_docs_signal.surql  08_seed_docs_infra.surql  09_seed_docs_governance.surql  10_seed_phase2_summary.surql  11_seed_phase3_tools.surql  12_enhanced_doc_workflow.surql  14_document_structure_standard.surql  15_fix_export_snapshot.surql  16_seed_platform_rules.surql  17_ultimate_ruleset.surql  18_super_governance_v3_1.surql  19_hub_sync_protocol.surql  20_doc_variation_protocol.surql  21_remote_handbook.surql  22_unified_master_governance.surql  23_css_driven_architecture.surql
scripts/: validate-docs.sh
src/: main.rs
src/core/: metrics.rs  mod.rs  rate_limiter.rs  security.rs  transport.rs
src/core/config/: mod.rs
src/core/database/: mod.rs  seeder.rs  vector.rs
src/modules/: mod.rs
templates/: AI_CONTEXT.md  API_SPEC.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MASTER_WORKFLOW_LOG.md  OPERATION_GUIDE.md  PRD.md  PROJECT_OVERVIEW.md  SAD.md  TDD.md  TEST_PLAN.md
tests/: verify_sse_transport.sh
(+19 files in other folders)
