[package]
name = "kyx-governance"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Runtime (Ultra-Native) - Matching kyx-kernel
ntex = { version = "2.17", features = ["tokio"] }
ntex-rt = "3.2"
ntex-util = "3.2"
ntex-cors = "2.0"

# Async & Utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.0", features = ["protocol-ws", "native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Formatting & Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

# MCP Logic
serde_repr = "0.1"
url = "2.0"
