[package]
name = "kyx-governance"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Runtime (Ultra-Native) - Matching kyx-kernel
ntex = { version = "2.17", features = ["tokio"] }
ntex-rt = "3.2"
ntex-util = "3.2"
ntex-cors = "2.1"

# Async & Utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.0", features = ["protocol-ws", "native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Formatting & Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "native-tls", "http2"] }

# MCP Logic
serde_repr = "0.1"
url = "2.0"

# Rate Limiting
governor = "0.6"
nonzero_ext = "0.3"

# Monitoring & Metrics
prometheus = "0.13"
lazy_static = "1.4"
